--- a/src/styles/youtube.css
+++ b/src/styles/youtube.css
@@ -14,6 +14,10 @@
 }
 
 .youtube__gradient {
+    @apply absolute inset-0 w-full h-full;
+}
+
+.youtube__gradient--dark {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.6) 100%),
         linear-gradient(90deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.2) 100%);
 }
