--- a/public/utilities.css
+++ b/public/utilities.css
@@ -36,6 +36,18 @@
 	align-items: center;
 }
 
+.ta-youtube-background {
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: 0;
+}
+
 .ta-youtube-gradient-dark {
 	position: absolute;
 	top: 0;
