--- a/src/styles/ta-youtube.css
+++ b/src/styles/ta-youtube.css
@@ -50,6 +50,18 @@
     align-items: center;
 }
 
+.ta-youtube-background {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
+
 .ta-youtube-anim {
     animation-timing-function: ease-in-out;
     animation-delay: 0s;
