Added gradient light to the preview version + fixed missing gradient class in tailwind css plugin

--- a/public/utilities.css
+++ b/public/utilities.css
@@ -48,7 +48,7 @@
 	z-index: 0;
 }
 
-.ta-youtube-gradient-dark {
+.ta-youtube-gradient {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -56,17 +56,13 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+
+.ta-youtube-gradient-dark {
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.6) 100%), linear-gradient(90deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.2) 100%);
 }
 
 .ta-youtube-gradient-light {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
 	background: linear-gradient(0deg, rgba(255,255,255, 0.6) 0%, rgba(255,255,255, 0) 50%, rgba(255,255,255, 0.6) 100%), linear-gradient(90deg, rgba(255,255,255, 0.2) 0%, rgba(255,255,255, 0) 50%, rgba(255,255,255, 0.2) 100%);
 }
 
